--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 repository = "https://github.com/foxication/pong"
 
 [dependencies]
-bevy = { version = "0.13.2", features = ["dynamic_linking"] }
+bevy = { version = "0.13.2" }
 bevy_editor_pls = "0.8.1"
 bevy_vello = { version = "0.4.2", features = ["svg"] }
 
